[gd_scene load_steps=28 format=2]

[ext_resource path="res://Sprites/Clock.png" type="Texture2D" id=1]
[ext_resource path="res://Sprites/ScoreCounter.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/Overheat_over.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Overheat_progress.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Alien.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/OverheatBack.png" type="Texture2D" id=6]
[ext_resource path="res://Sprites/AlienCam.png" type="Texture2D" id=7]
[ext_resource path="res://Sprites/Overheat_under.png" type="Texture2D" id=8]
[ext_resource path="res://Sprites/PanelTile.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/LifeCounter.png" type="Texture2D" id=12]
[ext_resource path="res://HUD.gd" type="Script" id=13]
[ext_resource path="res://Sprites/Back (1).png" type="Texture2D" id=14]
[ext_resource path="res://Fonts/SansFontBold2.tres" type="FontFile" id=15]
[ext_resource path="res://Sprites/Back (4).png" type="Texture2D" id=16]
[ext_resource path="res://Sprites/Back (3).png" type="Texture2D" id=17]
[ext_resource path="res://Sprites/Back (2).png" type="Texture2D" id=18]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0 ), 0.0, 0.0504398, 0, 0, Vector2( 0.550388, 0.245455 ), 1.14266, 1.14266, 0, 0, Vector2( 0.810077, 0.9 ), 1.49848, 1.49848, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="FontFile" id=10]
font_path = "res://Fonts/Digital-7.ttf"

[sub_resource type="FontFile" id=11]
size = 70
use_filter = true
spacing_top = -14
font_data = SubResource( 10 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 17 )
region_rect = Rect2( 0, 0, 200, 240 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 200, 240 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 200, 240 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 18 )
region_rect = Rect2( 0, 0, 200, 240 )

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BackPanel/Alien:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BackPanel/Alien:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
length = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("BackPanel/Alien:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.04 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 13 )
heater = SubResource( 12 )

[node name="BackPanel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 813.0
size_flags_vertical = 0
texture = ExtResource( 9 )
patch_margin_left = 51
patch_margin_top = 52
patch_margin_right = 55
patch_margin_bottom = 52
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Clock" type="Sprite2D" parent="BackPanel"]
position = Vector2( 329.891, 126.518 )
scale = Vector2( 1.4, 1.5 )
texture = ExtResource( 1 )

[node name="Alien" type="Sprite2D" parent="BackPanel"]
position = Vector2( 676, 116 )
texture = ExtResource( 5 )
hframes = 5
__meta__ = {
"_edit_group_": true
}

[node name="Sprite3" type="Sprite2D" parent="BackPanel/Alien"]
position = Vector2( 2.35498, -0.740967 )
z_index = 1
texture = ExtResource( 7 )

[node name="LifeCounter" type="Sprite2D" parent="BackPanel"]
position = Vector2( 1119.72, 136.462 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 12 )
hframes = 4

[node name="Sprite2" type="Sprite2D" parent="BackPanel"]
position = Vector2( 809.091, -18.645 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite2D" type="Sprite2D" parent="BackPanel"]
position = Vector2( 1420, 135 )
scale = Vector2( 1.40555, 1.40241 )
texture = ExtResource( 6 )
vframes = 2

[node name="Overheat" type="TextureProgressBar" parent="BackPanel"]
offset_left = 1238.0
offset_top = 85.0
offset_right = 1605.0
offset_bottom = 155.0
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 105.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_top = 17
stretch_margin_bottom = 17
__meta__ = {
"_edit_group_": true
}

[node name="TimeCounter" type="Control" parent="BackPanel"]
anchor_left = 0.115104
anchor_top = 0.179775
anchor_right = 0.201562
anchor_bottom = 0.468165
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="BackPanel/TimeCounter"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 11 )
text = "00:00"
align = 1
valign = 1

[node name="ScoreCounter" type="MarginContainer" parent="BackPanel"]
anchor_left = 0.440625
anchor_top = 0.0786517
anchor_right = 0.523958
anchor_bottom = 0.625468
offset_top = -1.90735e-06
offset_right = -6.10352e-05
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="BackPanel/ScoreCounter"]
offset_right = 159.0
offset_bottom = 145.0
alignment = 1

[node name="Label" type="Label" parent="BackPanel/ScoreCounter/VBoxContainer"]
offset_right = 159.0
offset_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 15 )
text = "SCORE"
align = 1
valign = 1
clip_text = true

[node name="Score" type="Label" parent="BackPanel/ScoreCounter/VBoxContainer"]
offset_top = 74.0
offset_right = 159.0
offset_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 15 )
text = "0"
align = 1

[node name="Button" type="Button" parent="BackPanel"]
anchor_left = 0.85625
anchor_top = -0.059925
anchor_right = 0.977605
anchor_bottom = 0.981277
theme_override_styles/hover = SubResource( 13 )
theme_override_styles/pressed = SubResource( 14 )
theme_override_styles/focus = SubResource( 16 )
theme_override_styles/disabled = SubResource( 17 )
theme_override_styles/normal = SubResource( 15 )
disabled = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tutorial" type="Label" parent="."]
visible = false
anchor_left = 0.4
anchor_top = 0.122068
anchor_right = 0.6
anchor_bottom = 0.226795
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_fonts/font = ExtResource( 15 )
text = "LMB to shoot
RMB to fly"
align = 1
__meta__ = {
"_edit_use_anchors_": true,
"_editor_description_": ""
}

[node name="RemoveTutorialTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/Shoot = SubResource( 9 )

[node name="CloseLidTimer" type="Timer" parent="."]

[connection signal="pressed" from="BackPanel/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="RemoveTutorialTimer" to="." method="_on_RemoveTutorialTimer_timeout"]
[connection signal="timeout" from="CloseLidTimer" to="." method="_on_CloseLidTimer_timeout"]
